Wed Jun  4 18:00:57 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gafizi.adb: Replaced pragma Elaborate by pragma Elaborate_All
	  since it makes no sense to elaborate only one of the needed
	  packages.

Thu May 29 17:30:14 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpcpoo.adb: Do not start handling a request until elaboration
	is terminated.

	* s-rpc.ads: (Initialize): new private initialization procedure.

	* s-rpc.adb: (Initialize): new procedure which installs the
	Public_Receiver.
	(Public_RPC_Receiver): do not check for end of elaboration here
	since it will block the protocol task.

	* s-rpcini.adb: Initialize System.RPC.

Tue May 20 17:09:53 1997  Laurent Pautet  <pautet@dorine.enst.fr>

	* s-rpstio.adb, s-rpstio.adb: Add to system.RPC.stream_io
 	 procedures Open and Close in order to have some controls on the
 	 stream in a concurrent application.

Sun May 18 18:30:03 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Puzzling bug signaled by Thomas Hautesserres fixed.

Wed May 14 15:05:52 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpcpoo.adb: Use values provided by System.Garlic.Options.

	* s-garopt.ads: Changed constants with reasonable values *evil grin*

Wed May 14 14:35:11 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* s-garopt.ads: Add three variables to handle anonymous task pool.

Mon May 12 12:32:53 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* Makefile.am, Makefile.in: Add s-rpstio.o dependencies.

Sun May 11 18:12:24 1997  Laurent Pautet  <pautet@dorine.enst.fr>

	* Makefile.zip: Don't rebuild zlib all the time.

Wed May  7 18:04:11 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpstio.ads: New procedure Initialize.

	* s-rpstio.adb: New procedure Initialize to avoid doing suspect
	things at elaboration time. Removed the Elaborate_All clauses.

	* s-rpcini.adb: Added call to Initialize procedure of Stream_IO.

Wed May  7 15:00:33 1997  Laurent Pautet  <pautet@scapin.enst.fr>
