@@ -88,7 +88,7 @@ package body System.Stream_Attributes is
           E_Bias  => 127,
           F_Size  => 23,
           E_Last  => 2 ** 8 - 1,
-          F_Mask  => 2 ** 7 - 1,
+          F_Mask  => 16#7F#,                  --  2 ** 7 - 1,
           E_Bytes => 2,
           F_Bytes => 3,
           F_Bits  => 23 mod US),
@@ -97,7 +97,7 @@ package body System.Stream_Attributes is
           E_Bias  => 1023,
           F_Size  => 52,
           E_Last  => 2 ** 11 - 1,
-          F_Mask  => 2 ** 4 - 1,
+          F_Mask  => 16#0F#,                  --  2 ** 4 - 1,
           E_Bytes => 2,
           F_Bytes => 7,
           F_Bits  => 52 mod US),
@@ -106,7 +106,7 @@ package body System.Stream_Attributes is
           E_Bias  => 16383,
           F_Size  => 63,
           E_Last  => 2 ** 15 - 1,
-          F_Mask  => 2 ** 8 - 1,
+          F_Mask  => 16#FF#,                  --  2 ** 8 - 1,
           E_Bytes => 2,
           F_Bytes => 8,
           F_Bits  => 63 mod US));
