@@ -1,3 +1,7 @@
+1997-06-11  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* s-stratt.adb: Changed 2**8 - 1 into 16#FF# to prevent error on VMS.
+
 Wed Jun  4 18:00:57 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* s-gafizi.adb: Replaced pragma Elaborate by pragma Elaborate_All
